--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "@nuxtjs/axios": "^5.3.6"
+    "express-jwt": "^5.3.1",
+    "mongoose": "^5.7.1",
+    "mongoose-relationship": "^0.1.5",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
