--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "mongoose-relationship": "^0.1.5",
     "nuxt": "^2.0.0"
