--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nuxtjs/axios": "^5.3.6",
     "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
+    "exceljs": "^2.0.1",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "file-saver": "^2.0.2",
     "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "mongoose-relationship": "^0.1.5",
