--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "mongoose-relationship": "^0.1.5",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
