--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "mongoose-relationship": "^0.1.5",
+    "multer": "^1.4.2",
     "nuxt": "^2.0.0",
     "vue-the-mask": "^0.11.1"
   },
